--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,16 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.49</version>
         </dependency>
+
+
+        <!--Redission 依赖-->
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson</artifactId>
+            <version>3.8.1</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
