--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,11 @@
 
     <groupId>com.stone.coral_sea</groupId>
     <artifactId>coral_sea</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>fnd</module>
+    </modules>
 
     <dependencies>
         <dependency>
