--- a/fnd/pom.xml
+++ b/fnd/pom.xml
@@ -88,13 +88,13 @@
         </dependency>
 
         <!--mysql数据库驱动-->
-     <!--   <dependency>
+        <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.19</version>
         </dependency>
 
-        &lt;!&ndash;mybatis plus extension,包含了mybatis plus core&ndash;&gt;
+        <!--mybatis plus extension,包含了mybatis plus core-->
         <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-extension</artifactId>
@@ -110,12 +110,12 @@
             <artifactId>mybatis-plus-annotation</artifactId>
             <version>${mybatis-plus.version}</version>
         </dependency>
-        &lt;!&ndash;mybatis&ndash;&gt;
+        <!--mybatis-->
         <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-boot-starter</artifactId>
             <version>${mybatis-plus.version}</version>
-        </dependency>-->
+        </dependency>
 
         <dependency>
             <groupId>cn.hutool</groupId>
@@ -147,18 +147,18 @@
             <artifactId>httpclient</artifactId>
         </dependency>
 
-<!--        &lt;!&ndash; druid 连接池 &ndash;&gt;
+        <!-- druid 连接池 -->
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid-spring-boot-starter</artifactId>
             <version>${druid.version}</version>
         </dependency>
-        &lt;!&ndash;阿里巴巴连接池依赖 &ndash;&gt;
+        <!--阿里巴巴连接池依赖 -->
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid</artifactId>
             <version>${druid.version}</version>
-        </dependency>-->
+        </dependency>
 
         <!--guava 依赖包-->
         <dependency>
