--- a/fnd/src/main/resources/application.yml
+++ b/fnd/src/main/resources/application.yml
@@ -1,9 +1,11 @@
 
 # spring ??
 spring:
+  application:
+    name: fnd-psi
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://host:3306/db?rewriteBatchedStatements=true&useSSL=false&serverTimezone=GMT%2B8
+    url: jdbc:mysql://{host}:3306/{db}?rewriteBatchedStatements=true&useSSL=false&serverTimezone=GMT%2B8
     username: admin
     password: pmostc@123
     type: com.alibaba.druid.pool.DruidDataSource
