--- a/fnd/src/main/resources/application.yml
+++ b/fnd/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
     name: fnd-psi
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://{host}:3306/{db}?rewriteBatchedStatements=true&useSSL=false&serverTimezone=GMT%2B8
+    url: jdbc:mysql://simba-test-db:3306/egatee_psi?rewriteBatchedStatements=true&useSSL=false&serverTimezone=GMT%2B8
     username: admin
     password: pmostc@123
     type: com.alibaba.druid.pool.DruidDataSource
