--- a/fnd/pom.xml
+++ b/fnd/pom.xml
@@ -196,6 +196,13 @@
             <artifactId>guava</artifactId>
             <version>20.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>5.2.4.Final</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
