--- a/fnd/src/main/resources/application.yml
+++ b/fnd/src/main/resources/application.yml
@@ -5,9 +5,9 @@ spring:
     name: fnd-psi
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://simba-test-db:3306/test_copy?rewriteBatchedStatements=true&useSSL=false&serverTimezone=GMT%2B8
-    username: admin
-    password: pmostc@123
+    url: jdbc:mysql://loalhost:3306/test_copy?rewriteBatchedStatements=true&useSSL=false&serverTimezone=GMT%2B8
+    username: root
+    password: Admin@2023!
     type: com.alibaba.druid.pool.DruidDataSource
   messages:
     #国际化配置
