--- a/fnd/src/main/resources/application.yml
+++ b/fnd/src/main/resources/application.yml
@@ -1,39 +1,3 @@
-
-# spring 配置
 spring:
-  application:
-    name: fnd-psi
-  datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://loalhost:3306/test_copy?rewriteBatchedStatements=true&useSSL=false&serverTimezone=GMT%2B8
-    username: root
-    password: Admin@2023!
-    type: com.alibaba.druid.pool.DruidDataSource
-  messages:
-    #国际化配置
-    basename: i18n/messages
-logging:
-  config: classpath:logback-spring.xml
-
-#mybatis
-mybatis-plus:
-  mapper-locations: classpath:/mapper/*.xml
-  typeAliasesPackage: com.fnd.psi.model
-  global-config:
-    db-config:
-      id-type: auto
-      field-strategy: not_empty
-      column-underline: true
-      #capital-mode: true
-      logic-delete-value: 1
-      logic-not-delete-value: 0
-      db-type: mysql
-    sql-parser-cache: true
-  configuration:
-    map-underscore-to-camel-case: true
-    cache-enabled: false
-    # log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
-server:
-  port: 8088
-    #servlet:
-  # context-path: "/api"
+  profiles:
+    active: prod
