--- a/fnd/src/main/resources/application-dev.yml
+++ b/fnd/src/main/resources/application-dev.yml
@@ -5,7 +5,7 @@ spring:
     name: fnd-psi
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://simba-test-db:3306/egatee_psi?rewriteBatchedStatements=true&useSSL=false&serverTimezone=GMT%2B8
+    url: jdbc:mysql://simba-test-db:3306/test_copy?rewriteBatchedStatements=true&useSSL=false&serverTimezone=GMT%2B8
     username: admin
     password: pmostc@123
     type: com.alibaba.druid.pool.DruidDataSource
@@ -35,5 +35,5 @@ mybatis-plus:
     # log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
 server:
   port: 8088
-  #servlet:
-  # context-path: "/api"
+  servlet:
+    context-path: "/api"
