--- a/fnd/src/main/resources/application-prod.yml
+++ b/fnd/src/main/resources/application-prod.yml
@@ -35,5 +35,5 @@ mybatis-plus:
     # log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
 server:
   port: 8088
-  #servlet:
-  # context-path: "/api"
+  servlet:
+    context-path: "/api"
